--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -1,6 +1,6 @@
 <h1>Welcome</h1>
 
 <p>We are currently working on your account.</p>
-<p>Your Account Balance: <%=</p>
+<p>Your Account Balance: $<%=current_user.account %></p>
 
 <p><a href="/logout">Log Out</a></p>
